--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,11 @@
 body {
     background-color: #d9dcd6;
 }
-
+p:hover {
+    text-decoration: underline;
+    font-weight: bold;
+    
+    }
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
